fix grey waves too wide

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,7 +137,7 @@ svg path {
 }
 
 .wave-1hkxOo {
-    width: 120%;
+    width: 100%;
     position:relative;
     top: 2.4rem; 
 }
